Issue:145 - column width alignment issue in campaign template should be fixed - Resolved

--- a/src/main/webapp/content/css/global.css
+++ b/src/main/webapp/content/css/global.css
@@ -199,3 +199,9 @@ ui bootstrap tweaks
 .btn-group.flex-btn-group-container .fa.disabled {
     color: gray;
 }
+.arrowColor {
+    color: #17a2b8;    
+}
+.table.table-striped tbody tr td.nowrap{
+    white-space: nowrap;
+}
